--- a/ConsoleAppProject/ConsoleAppProject.csproj
+++ b/ConsoleAppProject/ConsoleAppProject.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NUnit" Version="3.13.3" />
+    <PackageReference Include="Sandbox" Version="1.0.55" />
+  </ItemGroup>
+
 </Project>
